# micSync

./: .env.template  .gitignore  README.md  pyproject.toml
scripts/: micSync.sh
src/micsync/: __init__.py  audio.py  catalog.py  cli.py  config.py  eject.py  importer.py  lock.py  logging_utils.py  notify.py  parser.py  scanner.py
tests/: test_audio.py  test_catalog.py  test_cli.py  test_config.py  test_eject.py  test_importer.py  test_lock.py  test_logging_utils.py  test_notify.py  test_parser.py  test_scanner.py
